# nano-gpt

./: .cruft.json  .gitignore  .pre-commit-config.yaml  README.md  WORK_LOG.md  model_card.md  pyproject.toml  requirements_dev.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: cruft.yaml  lint.yaml  pages.yaml  publish.yaml  test.yaml
nano_gpt/: __init__.py  checkpoint.py  config.py  data.py  devices.py  hellaswag_eval.py  log.py  model.py  model_card.md  tokenizer.py  trainer.py
nano_gpt/datasets/: __init__.py  data_loader.py  finewebedu.py  tinyshakespeare.py
nano_gpt/tool/: __init__.py  __main__.py  eval.py  model_config.py  prepare_dataset.py  sample.py  train.py
script/: log_analysis.ipynb  run-ty.sh
tests/: __init__.py  conftest.py  test_checkpoint.py  test_data.py  test_model.py  test_train.py
tests/datasets/: test_data_loader.py  test_hellaswag.py  test_tinyshakespeare.py
