[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0"]

[project]
name = "nano_gpt"
version = "0.1.0"
license = "MIT"
license-files = ["LICENSE"]
description = "A GPT-2 reproduction following karpathy's nanoGPT youtube videos"
readme = "README.md"
authors = [{ name = "Allen Porter", email = "allen.porter@gmail.com" }]
requires-python = ">=3.10"
classifiers = []
dependencies = [
  "datasets>=3.3.2,<4",
  "tiktoken>=0.9.0",
  "transformers>=4.49.0",
  "torch",
]

[project.urls]
Source = "https://github.com/allenporter/nano_gpt"

[tool.setuptools.packages.find]
include = ["nano_gpt*"]

[project.entry-points."console_scripts"]
nano-gpt = "nano_gpt.tool.__main__:main"


[tool.mypy]
exclude = [
  "venv/",
]
platform = "linux"
show_error_codes = true
follow_imports = "normal"
local_partial_types = true
strict_equality = true
no_implicit_optional = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
disable_error_code = [
    "import-untyped",
]
extra_checks = false
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_return_any = true
warn_unreachable = true

[tool.codespell]
skip = "*.ipynb"
