[metadata]
name = nano_gpt
version = 0.0.1
description = A GPT-2 reproduction following karpathy's nanoGPT youtube videos
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/allenporter/nano_gpt
author = Allen Porter
author_email = allen.porter@gmail.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
python_requires = >=3.12
install_requires =
include_package_data = True
package_dir =
    = .

[options.packages.find]
where = .
exclude =
    tests
    tests.*

[options.package_data]
nano_gpt = py.typed
